Fully featured version

--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,15 @@
 }
 
 .flag-wrapper {
-  min-height: 250px;
+  min-height: 200px;
+  width: 100%;
+  margin-top: 2rem;
   display: flex;
   align-items: center;
-  margin: 0;
 }
 
 .flag {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.3);
   width: 100%;
 }
 
@@ -22,4 +23,13 @@
 
 .MuiAutocomplete-popper > div {
   background: rgba(255, 255, 255, 0.95);
+}
+
+
+.scene-container {
+  width: 100% !important;
+}
+
+.scene-container canvas {
+  margin: auto;
 }
