--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
+  padding: 30px 0;
 }
 
 .flag-wrapper {
   min-height: 200px;
   width: 100%;
-  margin-top: 2rem;
+  /*margin-top: 2rem;*/
   display: flex;
   align-items: center;
 }
