--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,20 @@
 .App {
-  text-align: center;
   padding: 30px 0;
+  text-align: center;
 }
 
 .flag-wrapper {
-  min-height: 200px;
+  height: 200px;
   width: 100%;
-  /*margin-top: 2rem;*/
   display: flex;
   align-items: center;
 }
 
 .flag {
   box-shadow: 0 3px 12px rgba(0, 0, 0, 0.3);
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
 }
 
 .population-label {
